JT-375 Fixing on firefox

--- a/app/assets/stylesheets/gs/objects/modal_layout.css.scss
+++ b/app/assets/stylesheets/gs/objects/modal_layout.css.scss
@@ -24,7 +24,6 @@
   .modal-signup-button {
     height: 39px;
     border-radius: 0 4px 4px 0;
-    width: 100%;
   }
   // Adds an inverse class for the modal close symbol for the dark background
   .close-inverse {
